--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>Hello world</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis facere aliquam pariatur optio beatae velit obcaecati. Impedit, quasi. Optio distinctio obcaecati a quaerat sequi perferendis dolores est ipsum et illum.</p>
     <p>This is added and im</p>
-    <p>This is updated</p>
+    <p>This is good</p>
 </body>
 </html>
